feat: sql model relationships tests
