# api/src/biodata_registry_api/models/admin.py
@@ -10,8 +10,11 @@ class UserUpdate(SQLModel):
     name: str | None = Field(default=None, max_length=254)
     contact: str | None = Field(default=None, max_length=254)
 
-class Users(UserCreate, table=True):
+class Users(SQLModel, table=True):
+    __tablename__ = "users"
     id: int | None = Field(default=None, primary_key=True)
+    name: str = Field(max_length=254)
+    contact: str = Field(max_length=254)
 
 class OrganizationCreate(SQLModel):
     name: str = Field(max_length=254)
@@ -19,8 +22,10 @@ class OrganizationCreate(SQLModel):
 class OrganizationUpdate(SQLModel):
     name: str | None = Field(default=None, max_length=254)
 
-class Organizations(OrganizationCreate, table=True):
+class Organizations(SQLModel, table=True):
+    __tablename__ = "organizations"
     id: int | None = Field(default=None, primary_key=True)
+    name: str = Field(max_length=254)
 
 class SpaceCreate(SQLModel):
     name: str = Field(max_length=254)
@@ -32,8 +37,10 @@ class SpaceUpdate(SQLModel):
     name: str | None = Field(default=None, max_length=254)
     organization_id: int | None = Field(default=None)
 
-class Spaces(SpaceCreate, table=True):
+class Spaces(SQLModel, table=True):
+    __tablename__ = "spaces"
     id: int | None = Field(default=None, primary_key=True)
+    name: str = Field(max_length=254)
     organization_id: int | None = Field(
         default=None, foreign_key="organizations.id"
     )
@@ -46,7 +53,8 @@ class SpaceAdminUpdate(SQLModel):
     user_id: int | None = Field(default=None)
     space_id: int | None = Field(default=None)
 
-class SpaceAdmins(SpaceAdminCreate, table=True):
+class SpaceAdmins(SQLModel, table=True):
+    __tablename__ = "space_admins"
     id: int | None = Field(default=None, primary_key=True)
     user_id: int | None = Field(default=None, foreign_key="users.id")
     space_id: int | None = Field(default=None, foreign_key="spaces.id")
@@ -59,7 +67,8 @@ class OrganizationAdminUpdate(SQLModel):
     user_id: int | None = Field(default=None)
     organization_id: int | None = Field(default=None)
 
-class OrganizationAdmins(OrganizationAdminCreate, table=True):
+class OrganizationAdmins(SQLModel, table=True):
+    __tablename__ = "organization_admins"
     id: int | None = Field(default=None, primary_key=True)
     user_id: int | None = Field(default=None, foreign_key="users.id")
     organization_id: int | None = Field(
@@ -70,17 +79,22 @@ class CollectionCreate(SQLModel):
     name: str = Field(max_length=254)
     description: str = Field(max_length=254)
     owner_id: int | None = Field(default=None)
-    # data_assets: List["DataAssets"] = Field(default=[])
+    # data_assets: List[int] = Field(default=[])
 
 class CollectionUpdate(SQLModel):
     name: str | None = Field(default=None, max_length=254)
     description: str | None = Field(default=None, max_length=254)
     owner_id: int | None = Field(default=None)
-    # data_assets: List["DataAssets"] | None = Field(default=None)
+    # data_assets: List[int] | None = Field(default=None)
 
-class Collections(CollectionCreate, table=True):
+class Collections(SQLModel, table=True):
+    __tablename__ = "collections"
     id: int | None = Field(default=None, primary_key=True)
+    name: str = Field(max_length=254)
+    description: str = Field(max_length=254)
     owner_id: int | None = Field(default=None, foreign_key="users.id")
     data_assets: List["DataAssets"] = Relationship(
-        back_populates="collections", link_model=CollectionDataAssets
+        back_populates="collections",
+        link_model=CollectionDataAssets,
+        sa_relationship_kwargs={'lazy': 'selectin'}
     )
