# api/src/biodata_registry_api/routes/collections.py
@@ -8,6 +8,7 @@ from fastapi import APIRouter, Depends, Query, HTTPException
 from sqlmodel import select
 from sqlmodel.ext.asyncio.session import AsyncSession
 from biodata_registry_api.models.admin import Collections, CollectionCreate, CollectionUpdate
+from biodata_registry_api.models.core import DataAssets
 
 from biodata_registry_api.session import get_session
 
@@ -102,3 +103,80 @@ async def update(
     await session.commit()
     await session.refresh(row)
     return row
+
+@router.get(
+    "/collection_data_assets",
+    tags=["admin"],
+    response_model=List[DataAssets],
+    operation_id="get_collection_data_assets"
+)
+async def get_collection_data_assets(
+        id: int,
+        session: AsyncSession = Depends(get_session),
+):
+    row = await session.get(Collections, id)
+    if not row:
+        raise HTTPException(
+            status_code=404, detail=f"{id} not found!"
+        )
+    data_assets = row.data_assets
+    return data_assets
+
+@router.delete(
+    "/collection_data_asset",
+    tags=["admin"],
+    operation_id="remove_collection_data_asset"
+)
+async def remove_collection_data_asset(
+        id: int,
+        data_asset_id: int,
+        session: AsyncSession = Depends(get_session),
+):
+    row = await session.get(Collections, id)
+    if not row:
+        raise HTTPException(
+            status_code=404, detail=f"{id} not found!"
+        )
+    foreign_row = await session.get(DataAssets, data_asset_id)
+    if not foreign_row:
+        raise HTTPException(
+            status_code=404, detail=f"{data_asset_id} not found!"
+        )
+    row.data_assets.remove(foreign_row)
+    session.add(row)
+    await session.commit()
+    await session.refresh(row)
+    return {
+        "ok": True,
+        "msg": f"Removed data_asset {data_asset_id} from collection {id}"
+    }
+
+@router.put(
+    "/collection_data_asset",
+    tags=["admin"],
+    # response_model=Collections,
+    operation_id="put_collection_data_asset"
+)
+async def add_collection_data_asset(
+        id: int,
+        data_asset_id: int,
+        session: AsyncSession = Depends(get_session),
+):
+    row = await session.get(Collections, id)
+    if not row:
+        raise HTTPException(
+            status_code=404, detail=f"{id} not found!"
+        )
+    foreign_row = await session.get(DataAssets, data_asset_id)
+    if not foreign_row:
+        raise HTTPException(
+            status_code=404, detail=f"{data_asset_id} not found!"
+        )
+    row.data_assets.add(foreign_row)
+    session.add(row)
+    await session.commit()
+    await session.refresh(row)
+    return {
+        "ok": True,
+        "msg": f"Added data_asset {data_asset_id} to collection {id}"
+    }
