# api/templates/generate_routes.py
@@ -2,6 +2,7 @@ import inspect
 from biodata_registry_api.models import link_tables, admin, core
 from jinja2 import Environment, FileSystemLoader
 from pathlib import Path
+from sqlalchemy import inspect as  sql_inspect
 
 def to_snake_case(text):
     return ''.join(['_' + char.lower() if char.isupper() else char for char in text]).lstrip('_')
@@ -14,6 +15,11 @@ admin_classes = [
 core_classes = [
     name for name, obj in inspect.getmembers(core, inspect.isclass)
     if obj.__module__ == core.__name__
+]
+
+link_table_classes = [
+    (name, obj) for name, obj in inspect.getmembers(link_tables, inspect.isclass)
+    if obj.__module__ == link_tables.__name__
 ]
 
 base_admin_class_names = [
@@ -81,3 +87,12 @@ for route_manifest in route_manifests:
     )
     with open(path_name, 'w') as f:
         f.write(template.render(route_manifest))
+
+
+#     if data_asset.collection_ids:
+#         statement = select(Collections).where(
+#             Collections.id.in_(data_asset.collection_ids)
+#         )
+#         results = await session.exec(statement)
+#         collections = results.all()
+#         row.collections = list(collections)
